# os_lab3

./: CMakeLists.txt
OS_lab3_report/inc/include/: shared_data.h
OS_lab3_report/inc/src/: child.c
OS_lab3_report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
include/: library.h
src/: child.c  library.c  parent.c
